fix create-todo html

--- a/src/app/components/create-todo/create-todo.component.html
+++ b/src/app/components/create-todo/create-todo.component.html
@@ -32,7 +32,7 @@
   <select formControlName="tag" class="form__select">
     <option *ngFor="let tag of eTagArray" [value]="tag">{{ tag }}</option>
   </select>
-  <button class="form__button" (cklick)="isSubmitClicked = true">
+  <button class="form__button" (click)="isSubmitClicked = true">
     Create todo
   </button>
 </form>
