--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,4 +1,4 @@
-<div class="todo" *ngIf="todo$ | async as todo">
+<div *ngIf="todo$ | async as todo" class="todo">
   <div class="todo__title-container">
     <h2
       class="todo__title"
